<resources>
    <string name="app_name">Fitness</string>
    <string name="fitness">Fitness</string>
    <string name="sign_up">ĐĂNG KÝ</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="firstText">Thế giới tập luyện mới : Giúp khả năng tập luyện của bạn lên một trình độ mới, dù là ở nhà hay phòng gym, vào bất cứ thời gian nào.</string>
    <string name="secondText">Khám phá thư viện tập luyện : Theo dõi và tham gia các thử thách tập luyện cùng chúng tôi, từ các bài tập, các buổi tập và các kế hoạch tập luyện</string>
    <string name="thirdText">Tập luyện theo cách của bạn : Bạn có thể tập luyện tùy theo mong muốn và ý thích của bản thân, chỉ là bạn có sẵn sàng tập luyện hay không thôi !</string>
    <string name="fourText">Theo dõi sự tiến bộ : Bạn hoàn toàn có thể theo dõi được sự tiến bộ của bản thân thông qua lịch sử tập luyện, và các kỳ lục tập luyện của bản thân</string>
    <string name="clickBack">ClickBack</string>
    <string name="email">Email</string>
    <string name="txt_fitness_training">CHÀO MỪNG BẠN ĐẾN VỚI FITNESS TRAINING</string>
    <string name="password">Mật Khẩu</string>
    <string name="log_in">ĐĂNG NHẬP</string>
    <string name="txtCreateAccount">Tạo Tài Khoản</string>
    <string name="firstName">Họ Tên Đệm</string>
    <string name="lastName">Tên</string>
    <string name="ch_n_gi_i_t_nh_c_a_b_n">CHỌN GIỚI TÍNH CỦA BẠN</string>
    <string name="female">Nữ</string>
    <string name="nam">Nam</string>
    <string name="_1_4">1/4</string>
    <string name="_2_4">2/4</string>
    <string name="_3_4">3/4</string>
    <string name="_4_4">4/4</string>
    <string name="next">Tiếp</string>
    <string name="kg">Kg</string>
    <string name="lb">Lb</string>
    <string name="ch_n_n_v_hi_n_th_kh_i_l_ng_c_a_b_n">CHỌN ĐƠN VỊ HIỂN THỊ KHỐI LƯỢNG CỦA BẠN</string>
    <string name="kg_lb_description">Bạn thường luyện tập theo với khối lượng tính theo KGs hay LBs? Chọn đơn vị mà bạn sử dụng, chúng tôi sẽ hiển thị đúng cách.</string>
    <string name="back">Quay về</string>
    <string name="birthday">Ngày sinh của bạn ?</string>
    <string name="birthdayDescription">Độ tuổi cũng là yếu tố quan trọng và cần thiết trong quá trình tập luyện</string>
    <string name="day">Ngày</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="submit">đồng ý</string>
    <string name="txtHeightWeight">Hãy nhập chiều cao, cân nặng của bạn</string>
    <string name="txtDescriptionHeightWeight">Chiều cao, cân nặng là 2 yếu tố quan trọng để tính được chỉ số khối BMI của cơ thể, giúp bạn biết được tình trạng cơ thể mình.</string>
    <string name="height">Chiều cao</string>
    <string name="weight">Cân nặng</string>
    <string name="khai_ph_ti_m_n_ng_c_a_b_n">Khai Phá Tiềm Năng Của Bạn</string>
    <string name="b_n_s_n_s_ng_b_t_u_t_p_luy_n_th_i">Bạn đã sẵn sàng. Bắt đầu tập luyện thôi !</string>
    <string name="txtGetStarted">Bắt Đầu</string>
    <string name="BMI_Text">BMI Của Bạn</string>
    <string name="explore">Khám Phá</string>
    <string name="create">Sáng Tạo</string>
    <string name="progress">Quá Trình</string>
    <string name="c_i_t">Cài Đặt</string>
    <string name="type">Theo Thể Loại</string>
    <string name="th_vi_n_b_i_t_p">Thư Viện Bài Tập</string>
    <string name="theo_th_i_gian">Theo Thời Gian</string>
    <string name="theo_d_ng_c">Theo Dụng Cụ</string>
    <string name="theo_b_ph_n">Theo Bộ Phận</string>
    <string name="body_weight">Bodyweight</string>
    <string name="mins">Phút</string>
    <string name="tay_tr_c">Tay Trước</string>
    <string name="tay_sau">Tay Sau</string>
    <string name="l_ng">Lưng</string>
    <string name="ng_c">Ngực</string>
    <string name="vai">Vai</string>
    <string name="i_tr_c">Đùi Trước</string>
    <string name="i_sau">Đùi Sau</string>
    <string name="m_ng">Mông</string>
    <string name="abs_core"><![CDATA[Abs & Core]]></string>
    <string name="t_m_ki_m_b_i_t_p">Tìm kiếm bài tập</string>
    <string name="to_n_th_n">Toàn Thân</string>
    <string name="overview">Giới Thiệu</string>
    <string name="Instruction">Hướng Dẫn</string>
    <string name="t_m_ki_m_bu_i_t_p">Tìm kiểm buổi tập</string>
    <string name="chi_ti_t_bu_i_t_p">Chi Tiết Buổi Tập</string>
    <string name="danh_s_ch_b_i_t_p">Danh Sách Bài Tập</string>
    <string name="c_i_t_th_i_gian_ngh">Cài đặt thời gian nghỉ</string>
    <string name="ho_n_t_t">Hoàn Tất</string>
    <string name="h_y">HỦY</string>
    <string name="skip">Bỏ Qua</string>
    <string name="h_y_b_t_p_luy_n">Hủy Bỏ Tập Luyện</string>
    <string name="b_n_c_ch_c_ch_n_mu_n_h_y_bu_i_t_p_to_n_b_qu_tr_nh_s_b_m_t">Bạn có chắc chắn muốn hủy buổi tập ? Toàn bộ quá trình sẽ bị mất</string>
    <string name="No">Không</string>
    <string name="c">Có</string>
    <string name="congratulation">Chúc Mừng Bạn Đã Hoàn Thành Buổi Tập ! </string>
    <string name="workout">Buổi Tập</string>
    <string name="personal_best">Kỷ Lục Cá Nhân</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>
    <string name="benchPress">Bench Press</string>
    <string name="history">Lịch Sử Tập Luyện</string>
    <string name="c_p_nh_t_k_l_c_c_a_b_n">Cập nhật kỷ lục của bạn</string>
    <string name="update">Cập Nhật</string>
    <string name="cancel">Hủy Bỏ</string>
    <string name="chi_ti_t_l_ch_t_p">Chi Tiết Lịch Tập</string>
    <string name="createWorkout">Tạo Buổi Tập</string>
    <string name="enter_workout_name">Điền Tên Buổi Tập Của Bạn</string>
    <string name="add_exercise">Thêm Bài Tập Vào Buổi Tập</string>
    <string name="add_exercise_in_workout">Thêm Bài Tập</string>
    <string name="detail_exercise">Chi Tiết Bài Tập</string>
    <string name="theo_s_set_rep"><![CDATA[Theo Số Set]]></string>
    <string name="by_time">Theo Thời Gian</string>
    <string name="number_set">Số Set</string>
    <string name="set">set</string>
    <string name="number_rep">Số Rep</string>
    <string name="rep">rep</string>
    <string name="second">giây</string>
    <string name="number_second">Số Giây</string>
    <string name="minutes">phút</string>
    <string name="number_minutes">Số Phút</string>
    <string name="list_exercise">Danh Sách Bài Tập</string>
    <string name="save_workout">Lưu Buổi Tập</string>
    <string name="save">Lưu</string>
    <string name="add_new_workout">Thêm Buổi Tập</string>
    <string name="namePlan">Tạo Kế Hoạch Tập Luyện</string>
    <string name="enterNamePlan">Điền Tên Kế Hoạch Tập Luyện</string>
    <string name="create_plan">Tạo Kế Hoạch</string>
    <string name="list_workout">Danh Sách Buổi Tập</string>
    <string name="add_more_workout">Thêm Buổi Tập</string>
    <string name="gender">Giới Tính</string>
    <string name="txt_birth_day">Ngày Sinh</string>
    <string name="notification">Thông Báo</string>
    <string name="bmi">Bmi</string>
    <string name="unit">Đơn Vị</string>
    <string name="nutrition">Dinh Dưỡng Tham Khảo</string>
    <string name="kcal">Kcal :</string>
    <string name="protein">Protein :</string>
    <string name="cab">Cab :</string>
    <string name="fat">Fat :</string>
    <string name="nutrition_100g">Dinh Dưỡng Trên 100g Thực Phẩm</string>
    <string name="forgotPassword"><u> Quên Mật Khẩu ? </u></string>
</resources>