<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtSelectBirthday"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/helvetica_rounded_bold"
        android:maxLines="2"
        android:text="@string/birthday"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:text="@string/birthdayDescription"
        android:textAlignment="center"
        android:textSize="@dimen/_12ssp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/txtSelectBirthday"
        android:layout_marginTop="@dimen/_50sdp"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtDescription"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/day"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/custom_edit_text_birthday"
            android:hint="@string/day"
            android:textSize="@dimen/_13ssp"
            android:textAlignment="center"
            android:fontFamily="@font/helvetica_rounded_bold"/>
        <EditText
            android:id="@+id/month"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/custom_edit_text_birthday"
            android:hint="@string/month"
            android:textSize="@dimen/_13ssp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:fontFamily="@font/helvetica_rounded_bold"/>
        <EditText
            android:id="@+id/year"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/custom_edit_text_birthday"
            android:hint="@string/year"
            android:textSize="@dimen/_13ssp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:fontFamily="@font/helvetica_rounded_bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtYearOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="@dimen/_35ssp"
        android:text="22"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_rounded_bold"
        android:text="@string/_3_4"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_42sdp"/>
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1AFFFFFF"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        android:text="@string/next"
        android:fontFamily="@font/helvetica_rounded_bold"
        android:textSize="@dimen/_12ssp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1AFFFFFF"
        android:drawableStart="@drawable/baseline_arrow_back_24"
        android:text="@string/back"
        android:fontFamily="@font/helvetica_rounded_bold"
        android:textSize="@dimen/_12ssp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_10sdp"/>
</RelativeLayout>