<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayoutCustomItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/images_custom_list"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txt_custom_list"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="sans-serif-medium"
            android:text="Ab Crunch"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            tools:ignore="RtlCompat" />
    </LinearLayout>
    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/detail_exercise"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCustomItem"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_10sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetail"
        >
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSetRep"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_90sdp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/theme_background_color"
                android:fontFamily="@font/helvetica_rounded_bold"
                android:textAlignment="center"
                android:text="@string/theo_s_set_rep"
                android:textSize="@dimen/_12ssp" />

            <RadioButton
                android:id="@+id/radioTime"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/theme_background_color"
                android:fontFamily="@font/helvetica_rounded_bold"
                android:text="@string/by_time"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp" />
        </RadioGroup>
        <LinearLayout
            android:id="@+id/layout_pick_set_rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_set"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <EditText
                android:id="@+id/editTxtSet"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/custom_edit_text_birthday"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="@dimen/_13ssp"
                android:textAlignment="center"
                android:hint="@string/set"
                android:layout_marginStart="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_rep"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <EditText
                android:id="@+id/editTxtRep"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/custom_edit_text_birthday"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="@dimen/_13ssp"
                android:textAlignment="center"
                android:hint="@string/rep"
                android:layout_marginStart="@dimen/_10sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_pick_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_minutes"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <EditText
                android:id="@+id/editTxtMinute"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/custom_edit_text_birthday"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="@dimen/_13ssp"
                android:textAlignment="center"
                android:hint="@string/minutes"
                android:layout_marginStart="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_second"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <EditText
                android:id="@+id/editTxtSecond"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/custom_edit_text_birthday"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="@dimen/_13ssp"
                android:textAlignment="center"
                android:hint="@string/second"
                android:layout_marginStart="@dimen/_10sdp"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/save"
            android:background="@drawable/background_button_get_started"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>