<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtSelectFinish"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/helvetica_rounded_bold"
        android:maxLines="2"
        android:text="@string/khai_ph_ti_m_n_ng_c_a_b_n"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:text="@string/b_n_s_n_s_ng_b_t_u_t_p_luy_n_th_i"
        android:textAlignment="center"
        android:textSize="@dimen/_13ssp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/txtSelectFinish"
        android:layout_marginTop="@dimen/_60sdp"/>
    <ImageView
        android:layout_width="@dimen/_225sdp"
        android:layout_height="@dimen/_341sdp"
        android:background="@drawable/image_running_women"
        android:layout_alignTop="@id/txtDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_75sdp"/>
    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/background_button_get_started"
        android:text="@string/txtGetStarted"
        android:textColor="@color/white"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="@dimen/_12ssp"/>
</RelativeLayout>