<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_gym"
            android:contentDescription="@string/clickBack" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/clickBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_450sdp"
            app:cardBackgroundColor="#99000000"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtCreateAccount"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:maxLines="2"
                    android:text="@string/txtCreateAccount"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignTop="@+id/txtCreateAccount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:background="@drawable/custom_edit_text_login_page"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/firstName"
                    android:paddingStart="@dimen/_16sdp"
                    android:textSize="@dimen/_15ssp" />
                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignTop="@+id/firstName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@drawable/custom_edit_text_login_page"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/lastName"
                    android:paddingStart="@dimen/_16sdp"
                    android:textSize="@dimen/_15ssp" />
                <EditText
                    android:id="@+id/emailSignUp"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignTop="@+id/lastName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@drawable/custom_edit_text_login_page"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/email"
                    android:paddingStart="@dimen/_16sdp"
                    android:textSize="@dimen/_15ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordSignUp"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/emailSignUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_65sdp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordLoginInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/custom_edit_text_login_page"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_16sdp"
                        android:textSize="@dimen/_15ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignTop="@id/passwordSignUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@drawable/custom_button_login_page"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/white"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_14ssp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>